# cgp-error-improvement

./: Cargo.toml
.cargo/: config.toml
cargo-cgp/: Cargo.toml
cargo-cgp/src/: cgp_diagnostic.rs  cgp_patterns.rs  diagnostic_db.rs  error_formatting.rs  lib.rs  render.rs  render_compiler_message.rs  root_cause.rs  run_check.rs  test_utils.rs
cargo-cgp/tests/: basic.rs  transitive.rs
discussions/: draft_pr.diff  draft_pr.md  issue.md
examples/: Cargo.toml
examples/src/: base_area.json  base_area.rs  base_area_2.json  base_area_2.rs  density.json  density.rs  density_2.json  density_2.rs  density_3.json  density_3.rs  lib.rs  scaled_area.json  scaled_area.pretty.json  scaled_area.rs  scaled_area_2.json  scaled_area_2.rs
prompts/: 01-error-message-analysis.report.md  02-rustc-files-survey.report.md  03-rustc-file-analysis.report.md  03-rustc-files-analysis.prompt.md  04-traceable-diagnostics-rfc.prompt.md  05-proposal-analysis.report.md  07-error-json-parsing.prompt.md  07-error-json-parsing.report.md  08-rust-analyzer.prompt.md  08-rust-analyzer.report.md  10-scaffold-cargp-cgp.prompt copy.md  11-format-error.prompt.md  12-format-improvements.md  13-combined-report.prompt.md  13-combined-report.report.md  error-message-analysis.md  error-message-analysis.report.md
reports/: 01-error-message-analysis.prompt.md  02-rustc-files-survey.prompt.md  04-traceable-diagnostics-rfc.report.md  05-proposal-analysis.prompt.md  06-external-tool.prompt.md  06-external-tool.report.md  09-gather-online-resources.prompt.md  09-gather-online-resources.report.md  10-combined-report.report.md  11-error-message-analysis.prompt.md  11-error-message-analysis.report.md  12-error-message-analysis.prompt.md  12-error-message-analysis.report.md  13-shorten-report.prompt.md  13-shorten-report.report.md
vibecoding/: 02-format-error.prompt.md  03-format-improvements.md  04-format-improvements.md  05-refactoring.md  06-refactoring.md  07-error-improvement.md  08-error-diagnostic.md  09-error-rendering.md  10-deduplicate.md  11-cli.md  11-error-format-improvement.md  12-error-format-improvement.md  13-fix-dependency-chain.md  14-merge-dependency-chain.md  15-merge-dependency-chain.md  16-merge-dependency-chain.md  17-flatten-dependency-chain.md  18-minor-error-improvement.md
