[workspace]

resolver = "3"

members = [
    "examples",
    "cargo-cgp",
]

[workspace.package]
rust-version    = "1.93"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp-error-improvement"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.6.1" }
cgp-error-anyhow    = { version = "0.6.1" }
# cgp                 = { version = "0.6.1", git = "https://github.com/contextgeneric/cgp.git", branch = "hide-char" }
# cgp-error-anyhow    = { version = "0.6.1", git = "https://github.com/contextgeneric/cgp.git", branch = "hide-char" }
cargo_metadata      = { version = "0.23.1", features = ["builder"] }
anyhow              = { version = "1.0.101" }
insta               = { version = "1.46.3" }
serde               = { version = "1.0.228" }
serde_json          = { version = "1.0.149" }