[package]
name = "cargo-cgp"
version = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[[bin]]
name = "cargo-cgp"
path = "bin/cargo_cgp.rs"

[dependencies]
cgp                 = { workspace = true }
cargo_metadata      = { workspace = true }
anyhow              = { workspace = true }
insta               = { workspace = true }
miette              = { workspace = true, features = ["fancy"] }